<resources>
    <string name="app_name">Amica</string>
    <string name="contact_name">Name</string>
    <string name="save_btn">Save</string>
    <string name="unknown">unknown</string>
    <string name="birthday">Birthday:</string>
    <string name="loved_ones">Loved Ones</string>
    <string name="favorites">Favorites</string>
    <string name="jobs">Jobs</string>
    <string name="interactions">Interactions</string>
    <string name="todos">Todos</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
